Working minimized Hyperscan version + .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -478,7 +478,7 @@ else()
 endif()
 
 add_subdirectory(util)
-add_subdirectory(doc/dev-reference)
+#add_subdirectory(doc/dev-reference)
 
 if (NOT WIN32)
 # PCRE check, we have a fixed requirement for PCRE to use Chimera
@@ -496,13 +496,13 @@ if (CORRECT_PCRE_VERSION AND PCRE_BUILD_SOURCE AND BUILD_STATIC_LIBS)
     set(BUILD_CHIMERA TRUE)
 endif()
 
-add_subdirectory(unit)
-if (EXISTS ${CMAKE_SOURCE_DIR}/tools/CMakeLists.txt)
-    add_subdirectory(tools)
-endif()
-if (EXISTS ${CMAKE_SOURCE_DIR}/chimera/CMakeLists.txt AND BUILD_CHIMERA)
-    add_subdirectory(chimera)
-endif()
+#add_subdirectory(unit)
+#if (EXISTS ${CMAKE_SOURCE_DIR}/tools/CMakeLists.txt)
+#    add_subdirectory(tools)
+#endif()
+#if (EXISTS ${CMAKE_SOURCE_DIR}/chimera/CMakeLists.txt AND BUILD_CHIMERA)
+#    add_subdirectory(chimera)
+#endif()
 endif()
 
 # do substitutions
@@ -548,13 +548,13 @@ if (CORRECT_PCRE_VERSION AND PCRE_BUILD_SOURCE AND BUILD_STATIC_LIBS)
     set(BUILD_CHIMERA TRUE)
 endif()
 
-add_subdirectory(unit)
-if (EXISTS ${CMAKE_SOURCE_DIR}/tools/CMakeLists.txt)
-    add_subdirectory(tools)
-endif()
-if (EXISTS ${CMAKE_SOURCE_DIR}/chimera/CMakeLists.txt AND BUILD_CHIMERA)
-    add_subdirectory(chimera)
-endif()
+#add_subdirectory(unit)
+#if (EXISTS ${CMAKE_SOURCE_DIR}/tools/CMakeLists.txt)
+#    add_subdirectory(tools)
+#endif()
+#if (EXISTS ${CMAKE_SOURCE_DIR}/chimera/CMakeLists.txt AND BUILD_CHIMERA)
+#    add_subdirectory(chimera)
+#endif()
 endif()
 
 if(NOT WIN32)
@@ -1422,7 +1422,7 @@ if (NOT BUILD_STATIC_LIBS)
     add_library(hs ALIAS hs_shared)
 endif ()
 
-option(BUILD_EXAMPLES "Build Hyperscan example code (default TRUE)" TRUE)
-if(NOT WIN32 AND BUILD_EXAMPLES)
-    add_subdirectory(examples)
-endif()
+option(BUILD_EXAMPLES "Build Hyperscan example code" OFF)
+#if(NOT WIN32 AND BUILD_EXAMPLES)
+#    add_subdirectory(examples)
+#endif()
